# co2-CASA

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: fpar_percentiles.yml  pipeline.yml  t_opt_by_biome.yml  wsc_percentiles.yml
config/epsilon_max/: relatorio.yml  xu2023.yml
config/regions/: oeiras.yml
docs/: casa-model.md  decisoes-arquitetura.md  literatura.md  pipeline.md
src/casa/: __init__.py  __main__.py  cli.py  config.py  emax.py  fpar.py  grid.py  landcover.py  ndvi.py  npp.py  pipeline.py  reports.py  sol.py  tstress.py  wsc.py
src/casa/inputs/: __init__.py
tests/unit/: test_config.py  test_emax.py  test_fpar.py  test_grid.py  test_landcover.py  test_ndvi.py  test_npp.py  test_pipeline.py  test_reports.py  test_smoke.py  test_sol.py  test_tstress.py  test_wsc.py
tools/: extract_all_pdfs.py  extract_pdf.py
